--- a/backend/static/css/index.css
+++ b/backend/static/css/index.css
@@ -10,11 +10,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: rgba(0, 0, 0, 0.87);
-  /* background-color: #1c4503;
-  background-image: url('/static/images/concert orange.jpg');
-  background-repeat: no-repeat;
-  background-size: cover; */
-  /* font-synthesis: none; */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -23,16 +18,10 @@ body {
 }
 
 #root {
-  /* background-image: url('/static/images/concert orange.jpg'); */
-  /* background-color: white; */
-  /* background-repeat: no-repeat;
-  background-size: cover;
-  background-color: white; */
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  /* place-items: center; */
 }
 
 #root::after {
@@ -90,7 +79,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: white;
+  background-color: rgb(115, 158, 229);
   cursor: pointer;
   transition: border-color 0.25s;
 }
